* Fixed notice when accessing special page without read permission and whitelist
  is not defined
* (bug 9252) Fix for tidy funkiness when using editintro mode
* (bug 4021) Fix for MySQL wildcard search
* (bug 10699) Fix for MySQL phrase search
* (bug 11321) Fix width of gallerybox when option "width=xxx" is used
* (bug 7890) Special:BrokenRedirects links deleted redirects to a non-existent page

=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers
* (bug 11308) Allow the API to output the image metadata

=== Languages updated in 1.12 ===

* Arabic (ar)
* Mapudungun (arn) (new)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bengali (bn)
* Czech (cs)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb)
* Extremaduran (ext)
* Persian (fa)
* Võro (fiu-vro)
* Frisian (fy)
* French (fr)
* Hebrew (he)
* Upper Sorbian (hsb)
* Icelandic (is)
* Kazakh (kk)
* Korean (ko)
* Dutch (nl)
* Russian (ru)
* Sakha (sah)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sudanese (su)
* Tamil (ta)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.12 has several database changes since 1.11, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could