@@ -1010,12 +1010,15 @@ if( $conf->posted && ( 0 == count( $errs ) ) ) {
 
 			print " done.</li>\n";
 
-			print "<li>Initializing data...</li>\n";
+			print "<li>Initializing statistics...</li>\n";
 			$wgDatabase->insert( 'site_stats',
 				array ( 'ss_row_id'        => 1,
 						'ss_total_views'   => 0,
-						'ss_total_edits'   => 0,
-						'ss_good_articles' => 0 ) );
+						'ss_total_edits'   => 1, # Main page first edit
+						'ss_good_articles' => 0, # Main page is not a good article - no internal link
+						'ss_total_pages'   => 1, # Main page
+						'ss_users'         => $conf->SysopName ? 1 : 0, # Sysop account, if created
+						'ss_images'        => 0 ) );
 
 			# Set up the "regular user" account *if we can, and if we need to*
 			if( $conf->Root and $conf->DBtype == 'mysql') {
